--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <meta charset="utf-8"> <title>サンプル</title> </head>
 <body>
 <h1>
-HTML のイメージ
+ご挨拶
 </h1>
 <p>
-HTML はタグを使って どこからどこまでがどの要素かを まとめます。
+春風　虎徹
+日大三→早稲田大
+趣味；野球観戦
+よろしくお願いします。
 </p>
 </body> </html>
