--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <html>
 <head>
-<meta charset="utf-8"> <title>サンプル</title> </head>
+<meta charset="utf-8"> <title>ご挨拶</title> </head>
 <body>
 <h1>
 ご挨拶
