--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html> <html>
 <head>
-<meta charset="utf-8"> <title>ご挨拶</title> </head>
+<meta charset="utf-8"> <title>サンプル</title> </head>
 <body>
 <h1>
 ご挨拶
 </h1>
 <p>
-春風　虎徹
-日大三→早稲田大
-趣味；野球観戦
-よろしくお願いします。
+HTML はタグを使って どこからどこまでがどの要素かを まとめます。
 </p>
 </body> </html>
