--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html> <html>
 <head>
-<meta charset="utf-8"> <title>サンプル</title> </head>
+<meta charset="utf-8"> <title>ポートフォリオ</title> </head>
 <body>
 <h1>
 ご挨拶
 </h1>
 <p>
-HTML はタグを使って どこからどこまでがどの要素かを まとめます。
+春風虎徹
+日大三→早稲田大
+趣味：野球観戦　ピアノ
+
 </p>
 </body> </html>
