--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html> <html>
-<head>
-<meta charset="utf-8"> <title>ポートフォリオ</title> </head>
-<body>
-<h1>
-ご挨拶
-</h1>
-<p>
-春風虎徹
-日大三→早稲田大
-趣味：野球観戦　ピアノ
-
-</p>
-</body> </html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>　　ご挨拶　　</title>
+        <link rel="Stylesheet" href="style.css">
+    </head>
+    <body>
+        <header></header>
+         <div class="**項目名**">
+            <h1>**見出し１**</h1>
+            <h3>**見出し２**</h3>
+        </div>       
+      
+      <footer></footer>
+    </body>
+</html>
