--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>ポートフォリオ作成課題</title>
     <link rel="Stylesheet" href="style.css">
 </head>
 
 <body>
     <header></header>
     <div class="Name">
-        <h1>Tetsu</h1>
-        <h3>Front-end Running Engineer</h3>
+        <h1>春風虎徹</h1>
+        <h3>極度な引きこもり</h3>
     </div>
     <div class="Image">
         <img src="animal_kuma.png" alt="KUMA" width="200" height="200">
