--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
     <header></header>
-    <div class="Name">
+    <div>
         <h1>春風虎徹</h1>
-        <h3>極度な引きこもり</h3>
+        <h3></h3>
     </div>
     <div class="Image">
         <img src="animal_kuma.png" alt="KUMA" width="200" height="200">
