--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
 <body>
     <header></header>
     <div>
-        <h1>春風虎徹</h1>
-        <h3></h3>
+        <h1>What a wonderful world</h1>
+        <h3>汽笛</h3>
     </div>
     <div class="Image">
         <img src="animal_kuma.png" alt="KUMA" width="200" height="200">
     </div>
 
     <div class="AboutMe">
-        <h2>About Me</h2>
-        <h4 class="age">Age</h4>
-        <p>19</p>
-        <h4 class="univ">Univ.</h4>
-        <p>Kwansei Gakuin University</p>
-        <h4>Major</h4>
-        <p>Computer Science</p>
-        <h4 class="belong">Belong</h4>
-        <p><a href="https://techuni.org" class="simple-link">Tech.uni<span glot-model="dev-rep"></span></a></p>
-        <hr class="default-hr">
+        <h2>自己紹介</h2>
+        <h4>年齢</h4>
+        <p>21</p>
+        <h4>趣味</h4>
+        <p>野球観戦</p>
+        <h4></h4>
+        <p></p>
+       
     </div>
 
     <div class="Skills">
