--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <div>
         <h1>What a wonderful world</h1>
-        <h3>汽笛</h3>
+        <h3>何となく好きなフレーズです。（特に意味はありません）</h3>
     </div>
     <div class="Image">
         <img src="animal_kuma.png" alt="KUMA" width="200" height="200">
@@ -22,17 +22,17 @@
         <p>21</p>
         <h4>趣味</h4>
         <p>野球観戦</p>
-        <h4></h4>
-        <p></p>
+        <h4>出身</h4>
+        <p>大阪府枚方市</p>
        
     </div>
 
-    <div class="Skills">
-        <h2>skills</h2>
+    <div>
+        <h2>特技</h2>
         <div class="skill-item">
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
+            <p>野球</p>
+            <p>お勉強</p>
+            <p>ピアノ</p>
         </div>
     </div>
     <footer></footer>
