--- a/index.html
+++ b/index.html
@@ -19,21 +19,30 @@
     <div class="AboutMe">
         <h2>自己紹介</h2>
         <h4>年齢</h4>
-        <p>21</p>
+        <p>21　大学生です</p>
         <h4>趣味</h4>
-        <p>野球観戦</p>
+        <p>野球観戦　学生野球からプロ野球まで幅広く観戦しています</p>
         <h4>出身</h4>
         <p>大阪府枚方市</p>
        
     </div>
 
     <div>
-        <h2>特技</h2>
-        <div class="skill-item">
+        <h2>特技・資格など</h2>
+        <div>
             <p>野球</p>
-            <p>お勉強</p>
-            <p>ピアノ</p>
+            <p>財務諸表の分析（先日、日商簿記一級を取得しました。）</p>
+            <p>ピアノ　</p>
         </div>
+     <div>
+        <h4>最近の悩み</h4>
+         　　　<p>今大学2年生で来年から就活のこととか考えなければいけないんですけど、どうしたらいいでしょう。<br>
+                自分としては日商簿記一級を武器にしていきたいと考えています。<br>
+               　このまま公認会計士や税理士を目指すのもありかな、とは考えているのですが、今からでは遅いかな〜とも思っています。
+                話は変わりますけど、スキマスイッチの「ガラナ」のサビのフレーズ「成功の影にいつだって、憂はつきものってもんだ」
+            </p>
+        
+     </div>
     </div>
     <footer></footer>
 </body>
