--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
             <p>野球</p>
             <p>財務諸表の分析（先日、日商簿記一級を取得しました。）</p>
             <p>ピアノ　</p>
-        <h4>最近の悩み</h4>
-         　　　<p>今大学2年生で来年から就活のこととか考えなければいけないんですけど、どうしたらいいでしょう。<br>
-                自分としては日商簿記一級を武器にしていきたいと考えています。<br>
-               　このまま公認会計士や税理士を目指すのもありかな、とは考えているのですが、今からでは遅いかな〜とも思っています。
-                話は変わりますけど、スキマスイッチの「ガラナ」のサビのフレーズ「成功の影にいつだって、憂はつきものってもんだ」
+        
+            <h4>最近の悩み</h4>
+            <p>今大学2年生で来年から就活のこととか考えなければいけないんですけど、どうしたらいいでしょう。<br>
+                自分としては日商簿記一級を武器にして経理職とか財務部に就きたいと考えています。<br>
+                このまま公認会計士や税理士を目指すのもありかな、とは考えているのですが、今からでは遅いかな〜とも思っています。<br>
+                話は変わりますけど、スキマスイッチの「ガラナ」のサビのフレーズ「成功の影にいつだって、憂はつきものってもんだ」という歌詞があるんですけど<br>
+                最近この歌詞にすごく励まされています。
             </p>
         
      </div>
