--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 自分としては日商簿記一級を武器にして経理職とか財務部に就きたいと考えています。<br>
                 このまま公認会計士や税理士を目指すのもありかな、とは考えているのですが、今からでは遅いかな〜とも思っています。<br>
                 話は変わりますけど、スキマスイッチの「ガラナ」のサビのフレーズ「成功の影にいつだって、憂はつきものってもんだ」という歌詞があるんですけど<br>
-                最近この歌詞にすごく励まされています。
+                最近この歌詞にすごく励まされています。<font color="red">八戸学院光星</font>
             </p>
         
      </div>
