--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <div>
         <h1>　<font color="red">What a wonderful world</font></h1>
-        <h3>何となく好きなフレーズです。（特に意味はありません）</h3>
+        <h3>初めまして</h3>
     </div>
     <div class="Image">
         <img src="animal_kuma.png" alt="KUMA" width="200" height="200">
