--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>　<font color="red">What a wonderful world</font></h1>
         <h3>初めまして</h3>
     </div>
-    <div class="Image">
+    <div>
         <img src="animal_kuma.png" alt="KUMA" width="200" height="200">
     </div>
 
