--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>初めまして</h3>
     </div>
     <div>
-        <img src="animal_kuma.png" alt="KUMA" width="200" height="200">
+        <img src="crystal-view-2018-01.jpg" alt="umi" width="200" height="200">
     </div>
 
     <div>
