--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="Stylesheet" href="style.css">
 </head>
 
-<body>
+<body bgcolor="lavender">
     <header></header>
     <div>
         <h1>　<font color="red">What a wonderful world</font></h1>
