--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div>
         <h2>特技・資格など</h2>
         <div>
-            <p>野球</p>
-            <p>財務諸表の分析（先日、日商簿記一級を取得しました。）</p>
-            <p>ピアノ　ショパンとか弾けます。エチュードOP25-5が得意です。</p>
+            <p>・野球</p>
+            <p>・財務諸表の分析（先日、日商簿記一級を取得しました。）</p>
+            <p>・ピアノ　（ショパンエチュードとか弾けます。エチュードop25-5が得意です。）</p>
         
             <h2>最近の悩みとか</h2>
             <p> 今大学2年生で来年から就活のこととか考えなければいけないんですけど、どうしたらいいでしょう。<br>
