--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>初めまして</h3>
     </div>
     <div>
-        <img src="crystal-view-2018-01.jpg" alt="umi" width="450" height="300">
+        <img src="IMG_0009.jpeg" alt="umi" width="450" height="300">
     </div>
 
     <div>
